7/1/11 Removed the assumption that one item will be selected from PeriodicTableNoede, see #2994
7/1/11 Removed unused classes
7/1/11 Moved PeriodicTableNode from build-an-atom to piccolo-phet, see #2994
6/30/11 Refactored combo box to avoid errors in IntelliJ presentation compiler, see #2982
6/30/11 Made it so the ComboBoxNode popup disappears when the user clicks elsewhere using a canvas-listening strategy instead of node-listening strategy
6/29/11 Add and remove the popup from the scene so that ComboBoxNode.getFullBounds() won't account for the invisible popup box, see #2982
6/29/11 Show the button as pressed when the user pressed it
6/29/11 Removed unused code
6/29/11 Added button images from Noah, replacing microsoft images, resolves #2983
6/29/11 Made it so the ComboBoxNode popup disappears when the user clicks away, see #2982
6/29/11 Added a ComboBoxNode, see #2982
6/19/11 Moved SliderNode from eating & exercise to piccolo-phet
6/6/11 added TextButtonNode.setText, for buttons that change their text when pressed
5/24/11 Changed ResetAllButtonNode to use TextButtonNode instead of HTML version, see #2902
5/24/11 Continued refactoring ButtonNode into subclasses, see #2902
5/24/11 Improved support for the action command, see #2902
5/24/11 Renamed ButtonNode to HTMLImageButtonNode before factoring out a more abstract ButtonNode parent class, see #2902
5/17/11 Made it so the light bulb rays don't intercept mouse events.  I added this since the light rays were getting in the way of the faucet slider in "sugar and salt solutions"
5/14/11 Moved toolbox-related classes to toolbox package from Bending Light for reuse in Sugar and Salt Solutions
5/14/11 Added listeners for the location of the ConductivityTester's bulb and battery, see #2876
5/11/11 fixed probe locations to account for offset of the parent node, see #2876
5/11/11 synchronize ConductivityTesterNode brightness value on init in case it was non-zero